# autocheck

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py  conanfile.txt  cupcake.json
.github/workflows/: cupcake.yml
catch_tests/: arbitrary.cpp  check.cpp  generator.cpp
include/: CMakeLists.txt
include/autocheck/: apply.hpp  arbitrary.hpp  autocheck.hpp  check.hpp  classifier.hpp  distribution.hpp  function.hpp  generator.hpp  generator_combinators.hpp  ostream.hpp  predicate.hpp  reporter.hpp  sequence.hpp  tuple.hpp  value.hpp
test/: apply.cpp  arbitrary.cpp  catch_test.cpp  check.cpp  demonstrate_failure.cpp  generator.cpp  generator_combinators.cpp
tests/: CMakeLists.txt  apply.cpp  arbitrary.cpp  check.cpp  factorial.cpp  generator.cpp  generator_combinators.cpp  is_one_of.cpp  largest.cpp  value.cpp
tutorial/: CMakeLists.txt  factorial.cpp
tutorial/demonstrate_failure/: demonstrate_failure.cpp
tutorial/factorial/: factorial.cpp
tutorial/insert_sorted/: .gitignore  Makefile  insert_sorted.cpp
tutorial/reverse/: Makefile  reverse.cpp
